Fix sonar issues