@@ -159,7 +159,7 @@ public class BailStatusHelper {
                 .flatMap(pc -> ofNullable(pc.getDefendants()).map(Collection::stream).orElseGet(Stream::empty))
                 .filter(d -> defendantId == null || defendantId.equals(d.getId()))
                 .flatMap(d -> ofNullable(d.getOffences()).map(Collection::stream).orElseGet(Stream::empty))
-                .collect(toList());
+                .toList();
     }
 
     /**
@@ -195,7 +195,7 @@ public class BailStatusHelper {
         final List<JudicialResult> effectiveResults = judicialResults.stream()
                 .filter(jr -> nonNull(jr.getPostHearingCustodyStatus()))
                 .filter(jr -> !isExcludedMainResult(jr))
-                .collect(toList());
+                .toList();
 
         if (effectiveResults.isEmpty()) {
             return empty();
@@ -239,26 +239,6 @@ public class BailStatusHelper {
                         .orElse(null))
                 .filter(Objects::nonNull)
                 .min(comparing(BailStatus::getStatusRanking));
-    }
-
-    private Optional<BailStatus> getPostHearingCustodyStatusBasedOnRank(final Defendant defendant, final List<BailStatus> bailStatusesFromRefData) {
-        final List<JudicialResult> judicialResults = defendant.getOffences().stream()
-                .map(Offence::getJudicialResults)
-                .filter(Objects::nonNull)
-                .flatMap(List::stream)
-                .collect(Collectors.toList());
-
-        return getBailStatusByJudicialResults(judicialResults, bailStatusesFromRefData);
-    }
-
-    private Optional<BailStatus> getPostHearingCustodyStatusBasedOnRank(final List<BailStatus> bailStatusesFromRefData, final List<Offence> offences) {
-        final List<JudicialResult> judicialResults = offences.stream()
-                .map(Offence::getJudicialResults)
-                .filter(Objects::nonNull)
-                .flatMap(List::stream)
-                .collect(toList());
-
-        return getBailStatusByJudicialResults(judicialResults, bailStatusesFromRefData);
     }
 
     private Optional<BailStatus> getBailStatusByJudicialResults(final List<JudicialResult> judicialResults, final List<BailStatus> bailStatusesFromRefData) {
